--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<!DOCTYPE html> <html><head><title>My first Website</title><body>
-    <h1>Hello, GitHub!</h1>
-</body></head></html>
+<!DOCTYPE html> <html><head><title>My first Website</title></head><body>
+    <h1>Hello, this is my first website!</h1><p>Made by Sobi</p>
+</body><html>
